--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
                     Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                     Pero estadisticamente no lo erer.... por ahora.
                 </p>
-                <p >Subscribete y dale like</p>
+                <p >Subscribete y dale like...</p>
             </div>
         </div>
     </body>
