--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
                     incréibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas.
                     Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
-                    Pero estadisticamente no lo erer.... por ahora.
+                    Pero estadisticamente no lo eres.... por ahora.
                 </p>
                 <p >Subscribete y dale like</p>
             <div id="footer">
